--- a/index.html
+++ b/index.html
@@ -8,36 +8,42 @@
     <meta name="keywords" content="SolidWorks, 3D Printing, Embedded Systems, GeorgiadiDesin, TOLiS">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="all" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
 
     <div class="header">
-      <a href="/"><img src="images/logo.png" alt="GeorgiadiDesign" title="GeorgiadiDesign"/></a>
-
-	<a href="#menu" id="toggle"><span></span></a>
-	<div id="menu">
-  	<ul>
-    	<li><a href="#cv">CV</a></li>
-	<li><a href="#portfolio">Portfolio</a></li>
-    	<li><a href="#about">About</a></li>
-  	</ul></div>
-
+	<a href="/"><img src="images/logo.png" alt="GeorgiadiDesign" title="GeorgiadiDesign"/></a>
     </div>
 
     <div class="row">
 	
 	<div class="col-3">
-
-	<br><br><br><br><br>
-        <h1><i>I Design Stuff.</i></h1>
+	<br><br><br>
+	<ul class="nav">
+		<li><a href="#cv">CV</a></li>
+		<li><a href="#portfolio">Portfolio</a></li>
+		<li><a href="#about">About</a></li>
+	</ul>
+	<br><br>
+	<h1><i>I Design Stuff.</i></h1>
         <br>
-        <h3><i>some I make. they tend to work.<br>
+	<h3><i>some I make. they tend to work.<br>
           at first try. at least once.<br>
           <br>
           I speak SolidWorks, CAD/CAM<br>
           Embedded Systems, 3D Printing.</i></h3>
+	<br>
 
+	<ul class="social">
+  	<li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+  	<li><i class="fa fa-instagram" aria-hidden="true"></i></li>
+  	<li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
+  	<li><i class="fa fa-youtube" aria-hidden="true"></i></li>
+	</ul>
+
+	
 	</div>
 
       <div class="col-9">
@@ -47,7 +53,5 @@
     </div>
 
 	<h6> (C) TOLiS </h6>
-
-<script  src="function.js"></script>
   </body>
 </html>
