--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 	<br>
 
 	<ul class="social">
-  	<li><i class="fa fa-facebook" aria-hidden="true"></i></li>
-  	<li><i class="fa fa-instagram" aria-hidden="true"></i></li>
-  	<li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
+  	<li><a href="https://www.facebook.com/GeorgiadiDesign/"><i class="fa fa-facebook" aria-hidden="true"></a></i></li>
+  	<li><a href="http://www.linkedin.com/in/a-georgiadis"><i class="fa fa-linkedin" aria-hidden="true"></a></i></li>
   	<li><i class="fa fa-youtube" aria-hidden="true"></i></li>
+ 	<li><i class="fa fa-instagram" aria-hidden="true"></i></li>
 	</ul>
 
 	
