--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
   <body>
 
+	<div class="corner-ribbon">Under Construction</div>
+
     <div class="header">
 	<a href="/"><img src="images/logo.png" alt="GeorgiadiDesign" title="GeorgiadiDesign"/></a>
     </div>
