--- a/TheLegoManiac/index.html
+++ b/TheLegoManiac/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
+<title>The Lego Maniac</title>
+<body style="background-color:black;">
 
+<div style="text-align: center;">
+<p></p>
+  <p></p>
+  <p></p>
+  <p></p>
+
+<img src="DSC_2360ce.jpg" style="width:600px;">
+
+<p style="color:red;">..Arriving Soon!..</p>
+</div?
+</body>
+</html> 
